# burn_experiments

./: .gitignore  .zshrc  CMakeLists.txt  CMakeLists_trt.txt  Cargo.toml  Dockerfile  Dockerfile_rust_conv  Dockerfile_rust_final  Dockerfile_rust_libtorch  Dockerfile_rust_testing  Dockerfile_rust_zsh  Makefile  README.org  build.rs  build_container.sh  build_rust_conv.sh  build_rust_final.sh  build_rust_libtorch.sh  build_rust_testing.sh  build_rust_zsh.sh  buildah_build.sh  compile.py  compile.sh  compile_2_trt.py  compile_commands.json  compile_g++.sh  docker.sh  download.sh  host.image_names.sh  image_run.sh  image_run_amd.sh  image_run_nvidia.sh  important_functions.sh  infer.sh  main.cpp  main.py  main.sh  podman_run.sh  run.sh  shell.nix  (+3 more)
docker/cpu/0_add_protoc/: Dockerfile  README.org  host.image_names.sh
src/: client.rs  export.hpp  export.rs  main.cpp  main.h  main.hpp  main.rs  model.rs  mylib.rs  test.cpp
