[package]
name = "burn_test"
version = "0.1.0"
edition = "2024"

include = [
    "src/main.cpp",
    "src/main.hpp",
    "src/main.h",
    "src/main.rs",
    "Cargo.toml",
    "Makefile",
    "build.rs",
    "compile.py",
]

[[bin]]
name = "infer-server"
path = "src/main.rs"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]
image = { version = "0.25.6", features = ["serde", "nasm"] }
prost = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
actix-multipart = "0.7.2"
actix-web = "4.11.0"
