[package]
name = "burn_test"
version = "0.1.0"
edition = "2024"

include = [
    "src/main.cpp",
    "src/main.hpp",
    "src/main.rs",
    "Cargo.toml",
    "build.rs",
    "compile.py",
]

[[bin]]
name = "infer-server"
path = "src/main.rs"

[[bin]]
name = "infer-client"
path = "src/client.rs"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
futures-util = "0.3.31"
image = { version = "0.25.6", features = ["serde", "nasm"] }
prost = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic-prost = "*"
tonic = { version = "0.14.2", features = ["zstd"] }
