[package]
name = "burn_test"
version = "0.1.0"
edition = "2024"

include = [
    "src/main.cpp",
    "src/main.hpp",
    "src/main.rs",
    "Cargo.toml",
    "build.rs",
    "compile.py",
]

[[bin]]
name = "infer-server"
path = "src/main.rs"

[[bin]]
name = "infer-client"
path = "src/client.rs"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]

actix-multipart = "0.7.2"
actix-web = "4.11.0"

prost = "0.14"
tonic-prost = "*"
tonic = { version = "0.14.2", features = ["zstd"] }

futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }

image = { version = "0.25.6", features = ["serde", "nasm"] }

rpmalloc = { version = "0.2.2", features = ["adaptive_thread_cache", "global_cache", "thread_cache"] }
